<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/ac"
            android:textColor="#FF5722"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/segClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/delete"
            android:textColor="#FF5722"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/percentage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/percentage"
            android:textColor="#FF5722"
            android:textSize="25sp"
            tools:ignore="VisualLintButtonSize"></Button>

        <Button
            android:id="@+id/divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textColor="#FF5722"
            android:textSize="25sp"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/seven"
            android:layout_margin="2dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/eight"
            android:layout_margin="2dp"
            android:textSize="25sp"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/nine"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textColor="#FF5722"
            android:textSize="25sp"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/four"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/five"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/six"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/sub"
            android:textColor="#FF5722"
            android:textSize="25sp"
            tools:ignore="VisualLintButtonSize"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/one"
            android:textSize="25sp"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/two"
            android:layout_margin="2dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/three"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textColor="#FF5722"
            android:textSize="25sp"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/zero"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/dot"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDecimal"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:backgroundTint="#fe621d"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>